glx/testdata/invalid/invalid-properties/persons/person-father.glx
persons:
  person-father:
    properties:
      given_name: "Robert"
      family_name: "Thompson"
      gender: male
      invalid_property: "should fail"
      another_invalid: "also bad"
